# rk35xx-dumper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  get-toolchain.sh  qemu-test.sh
cmake/RKBOOT/: rk3566.ini.in  rk3568.ini.in
cmake/toolchains/: aarch64-none-elf.cfg  aarch64-none-elf.cmake
src/: aarch64-picolibc.ld  main.c  payload.lds  printf.c  printf.h  types.h  uart.c  uart.h
